--- a/Br-Architect.html
+++ b/Br-Architect.html
@@ -62,7 +62,7 @@
       </nav>
     </header>
 
-
+<!-- Start of main section -->
 
     <main>
       <div id="hero-section" class="d-flex align-items-center">
